packages/synterix-panels/static/templates/DaemonSet.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      name: fluentd
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: fluentd
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - name: fluentd
          image: fluentd:latest
          ports:
            - containerPort: 24224
      nodeSelector:
        role: logging
