packages/synterix-panels/static/templates/Service-ExternalName.yml
apiVersion: v1
kind: Service
metadata:
  name: database-proxy
  namespace: ${NAMESPACE}
spec:
  type: ExternalName
  externalName: my-production-database.example.com  # 外部服务地址
