packages/synterix-panels/static/templates/Service-Headless.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: ${NAMESPACE}
spec:
  clusterIP: None  # 关键字段！
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
