packages/synterix-panels/static/templates/Service-LoadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ${NAMESPACE}
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"  # 内网LB
spec:
  type: LoadBalancer
  selector:
    app: api-server
  ports:
    - name: https
      port: 443
      targetPort: 8443
