packages/synterix-panels/static/templates/Service-NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ${NAMESPACE}
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 80          # Service端口
      targetPort: 3000  # Pod端口
      nodePort: 31000   # 节点端口（范围30000-32767，可选）
