packages/synterix-panels/static/templates/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/client-body-buffer-size: 20m
    nginx.ingress.kubernetes.io/keepalive: "32"
    nginx.ingress.kubernetes.io/limit-connections: "65535"
    nginx.ingress.kubernetes.io/limit-rps: "200"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 20m
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 10s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600s
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-http2: "true"
  name: synterix
spec:
  defaultBackend:
    service:
      name: synterix-central
      port:
        number: 7089
  ingressClassName: nginx
  rules:
    - host: synterix.com
      http:
        paths:
          - backend:
              service:
                name: synterix-central
                port:
                  number: 7089
            path: /synterix/(.*)
            pathType: ImplementationSpecific
